Fix large number clipping bug in Safari (#27)

--- a/src/styles/partials/section.css
+++ b/src/styles/partials/section.css
@@ -51,6 +51,10 @@
 }
 
 .section__header__title {
+  padding-left: var(
+    --s3
+  ); /* Safari clips the large number without this /shrug */
+
   letter-spacing: var(--tracked-mega);
 }
 
